--- a/style.css
+++ b/style.css
@@ -87,6 +87,39 @@ input[type=text], input[type=email], input[type=password]{
 	background: white;
 }
 
+#select{
+	margin: 0 auto;
+	padding: 0;
+	clear: both;
+	text-align: center;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	width: 360px;
+	height:250px;
+	background: white;
+}
+
+.selectbutton{
+	font-size: 12px;
+	width: 200px;
+	height: 40px;
+	margin: 10px auto;
+	padding: 5px;
+	display: block;
+	color: black;
+	background-color: rgb(188,204,184);
+	border: 1px solid black;
+}
+
+.selectbutton a{
+	text-decoration: none;
+}
+
+.selectbutton a:hover{
+	color: rgb(247,244,184);
+}
+
 #creategroupdiv{
 	margin: 0 auto;
 	padding: 0;
