--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -5,7 +5,7 @@
 body{
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 100;
-	background-image: url("resources/images/background3.png");
+	background-image: url("../images/background3.png");
 	color: black;
 	margin: 0
 }
