--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -153,6 +153,18 @@ input[type=text], input[type=email], input[type=password]{
 	background: white;
 }
 
+#joindiv{
+	margin: 0 auto;
+	padding: 0;
+	clear: both;
+	text-align: center;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	width: 500px;
+	background: white;
+}
+
 a{
 	color: black;
 }
