--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -78,6 +78,22 @@ body{
 	cursor: pointer;
 }
 
+.viewsubmit{
+	/*margin: 10px auto;
+	padding: 5px;*/
+	display: inline-block;
+	color: black;
+	background-color: rgb(188,204,184);
+	border: 1px solid black;
+	width: 100%;
+	height: 50px;
+}
+
+.viewsubmit:hover{
+	background-color: rgb(247,244,184);
+	cursor: pointer;
+}
+
 .divider{
     width:5px;
     height:auto;
@@ -168,6 +184,38 @@ input[type=text], input[type=email], input[type=password]{
 	border-color: black;
 	border-width: 1px;
 	width: 500px;
+	background: white;
+}
+
+#viewdiv {
+	margin: 0 auto;
+	padding: 0;
+	clear: both;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	width: 500px;
+	background: white;
+}
+
+#viewdiv h1{
+	text-align: center;
+}
+
+.grouplisttable{
+	margin: 10px auto;
+	background:white;
+	border: 1px solid black;
+	width: 30%;
+}
+
+.tdlable {
+	text-align: center;
+	background: white;
+	border: 1px solid black;
+}
+
+.viewtr {
 	background: white;
 }
 
