changed index slightly

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -199,8 +199,20 @@ input[type=text], input[type=email], input[type=password]{
 	background: rgb(247,244,184);
 }
 
-#indexdiv{
+#indexwelcomediv{
 	margin: 0 auto;
+	padding: 0;
+	clear: both;
+	text-align: center;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	width: 500px;
+	background: white;
+}
+
+#indexdiv{
+	margin: 10px auto;
 	padding: 0;
 	clear: both;
 	text-align: center;
