--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -414,3 +414,11 @@ table {
 	clear: both;
 
 }
+
+.footer{
+	 position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    text-align: center;
+}
