--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -28,9 +28,9 @@ h2{
 }
 
 ul {
-	margin: 0 0 10px 0 auto;
+	margin: 0 0 10px 0;
 	padding: 0;
-  list-style-type: none;
+	list-style-type: none;
 }
 
 li {
@@ -69,7 +69,6 @@ li {
 
 #loginfield h1{
 	text-align: center;
-
 }
 
 #loginfield{
@@ -162,7 +161,7 @@ input[type=text], input[type=email], input[type=password]{
 	padding: 12px;
 	display: block;
 	border: 1px solid black;
-	width: 300px;
+	width: 80%;
 }
 .Signup{
 	padding-top: 50px;
@@ -184,8 +183,12 @@ input[type=text], input[type=email], input[type=password]{
 	border-style: solid;
 	border-color: black;
 	border-width: 1px;
-	width: 360px;
+	width: 30%;
 	background: white;
+}
+
+table {
+	width: 100%;
 }
 
 #select{
